--- a/styling.css
+++ b/styling.css
@@ -5,19 +5,70 @@ body {
 }
 
 .content {
-  margin: 0 auto;
   max-width: 1920px;
   padding: 55px 99px;
 }
 
 .heading {
-  background-color: #fbf9ff ;
-  color: #0a041b;
+  color: #060210;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
 }
 
 .heading h1 {
   font-size: 4vw;
   margin: 0;
+}
+
+.nav {
+  flex-grow: 1;
+}
+
+.nav ul {
+  color: #fbf9ff;
+  position: relative;
+  z-index: 11;
+  text-align: right;
+  list-style: none;
+}
+
+.nav ul li {
+  font-size: 1.5em;
+}
+
+.nav ul li:nth-child(1) {
+  margin-right: 1vw;
+}
+
+.nav ul li:nth-child(2) {
+  margin-right: 2vw;
+}
+
+.nav ul li:nth-child(3) {
+  margin-right: 3vw;
+}
+
+.nav ul li:nth-child(4) {
+  margin-right: 4vw;
+}
+
+.nav:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 88%;
+  width: 100%;
+  height: calc(100% + 5px);
+  background: #060210;
+  -webkit-transform-origin: 100% 0;
+  -ms-transform-origin: 100% 0;
+  transform-origin: 100% 0;
+  -webkit-transform: skew(-40deg);
+  -ms-transform: skew(-40deg);
+  transform: skew(-40deg);
+  z-index: 0;
+  border-left: 5px #4b23c3 solid;
 }
 
 @media screen and (min-width: 1920px) {
@@ -36,7 +87,7 @@ body {
 }
 
 .main {
-  background-color: #0a041b;
+  background-color: #060210;
   border-top: 5px #4b23c3 solid;
   color: #fbf9ff;
 }
