--- a/styling.css
+++ b/styling.css
@@ -13,7 +13,6 @@ body {
   color: #060210;
   display: flex;
   position: relative;
-  justify-content: space-between;
 }
 
 .heading h1 {
@@ -22,54 +21,22 @@ body {
 }
 
 .nav {
-  flex-grow: 1;
+  background-color: #4b23c3;
 }
 
 .nav ul {
-  color: #fbf9ff;
-  position: relative;
-  z-index: 11;
-  text-align: right;
-  list-style: none;
+  max-width: 1920px;
+  margin: 0;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .nav ul li {
-  font-size: 1.5em;
+  display: inline-block;
+  margin: 1em;
+  font-weight: 700;
 }
 
-.nav ul li:nth-child(1) {
-  margin-right: 1vw;
-}
-
-.nav ul li:nth-child(2) {
-  margin-right: 2vw;
-}
-
-.nav ul li:nth-child(3) {
-  margin-right: 3vw;
-}
-
-.nav ul li:nth-child(4) {
-  margin-right: 4vw;
-}
-
-.nav:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 88%;
-  width: 100%;
-  height: calc(100% + 5px);
-  background: #060210;
-  -webkit-transform-origin: 100% 0;
-  -ms-transform-origin: 100% 0;
-  transform-origin: 100% 0;
-  -webkit-transform: skew(-40deg);
-  -ms-transform: skew(-40deg);
-  transform: skew(-40deg);
-  z-index: 0;
-  border-left: 5px #4b23c3 solid;
-}
 
 @media screen and (min-width: 1920px) {
   .heading h1 {
