--- a/styling.css
+++ b/styling.css
@@ -2,17 +2,17 @@ body {
   display: block;
   font-family: 'Quicksand', sans-serif;
   margin: 0;
+  background: #030106;
+  color: #f0eef3;
 }
 
 .content {
   max-width: 1920px;
-  padding: 55px 99px;
+  margin: 0 10%;
 }
 
 .heading {
-  color: #060210;
-  display: flex;
-  position: relative;
+  margin: 88px 0;
 }
 
 .heading h1 {
@@ -20,21 +20,24 @@ body {
   margin: 0;
 }
 
-.nav {
-  background-color: #4b23c3;
-}
-
 .nav ul {
   max-width: 1920px;
   margin: 0;
-  display: flex;
-  justify-content: space-evenly;
 }
 
 .nav ul li {
   display: inline-block;
   margin: 1em;
   font-weight: 700;
+}
+
+.nav a {
+  color: white;
+  text-decoration: none;
+}
+
+.nav a:hover {
+  border-bottom: 2px #340552 solid;
 }
 
 
@@ -49,13 +52,59 @@ body {
   margin: 0;
 }
 
-.highlight {
-  color: #4b23c3;
+.copy {
+  border-left: 3px solid #340552;
+  padding: 0.5% 1%;
+  overflow: hidden;
 }
 
+.slideIn {
+  animation-name: slideIn;
+  animation-duration:1s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translate(-100%);
+  }
+  to {
+    transform: translate(0);
+  }
+}
+
+.openEqually {
+  animation-name: openEqually;
+  animation-duration:1s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  transition: all 1s ease-in-out;
+}
+
+@keyframes openEqually {
+  from {
+    height: 0px;
+  }
+  to {
+    height: 100px;
+  }
+}
+
+
+
+
+
+
+
+
+
+/* Portfolio */
 .main {
-  background-color: #060210;
-  border-top: 5px #4b23c3 solid;
+  background-color: #04020a;
+  border-top: 5px #351694 solid;
   color: #fbf9ff;
 }
 
@@ -76,7 +125,7 @@ body {
 }
 
 .portfolio-items .button {
-  background-color: #4b23c3;
+  background-color: #351694;
   border-radius: 11px;
   color: #fbf9ff;
   padding: 11px;
