--- a/styling.css
+++ b/styling.css
@@ -8,11 +8,11 @@ body {
 
 .content {
   max-width: 1920px;
-  margin: 0 10%;
+  margin: 0 11%;
 }
 
 .heading {
-  margin: 88px 0;
+  margin: 11% 0;
 }
 
 .heading h1 {
@@ -37,14 +37,7 @@ body {
 }
 
 .nav a:hover {
-  border-bottom: 2px #340552 solid;
-}
-
-
-@media screen and (min-width: 1920px) {
-  .heading h1 {
-    font-size: 80px;
-  }
+  border-bottom: 2px #59098c solid;
 }
 
 .heading p {
@@ -52,8 +45,23 @@ body {
   margin: 0;
 }
 
+@media screen and (max-width: 750px) {
+  .heading h1 {
+    font-size: 26px;
+  }
+  .heading p {
+    font-size: 13px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .heading h1 {
+    font-size: 80px;
+  }
+}
+
 .copy {
-  border-left: 3px solid #340552;
+  border-left: 3px solid #59098c;
   padding: 0.5% 1%;
   overflow: hidden;
 }
@@ -64,6 +72,8 @@ body {
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
+  animation-delay: 1.2s;
+  transform: translate(-100%);
 }
 
 @keyframes slideIn {
@@ -77,20 +87,47 @@ body {
 
 .openEqually {
   animation-name: openEqually;
-  animation-duration:1s;
+  animation-duration: 0.3s;
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
-  transition: all 1s ease-in-out;
+  animation-delay: 0.8s;
+  transform: scaleY(0);
 }
 
 @keyframes openEqually {
   from {
-    height: 0px;
+    transform: scaleY(0);
   }
   to {
-    height: 100px;
+    transform: scaleY(1);
   }
+}
+
+.flickerIn {
+  animation-name: flickerIn;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes flickerIn {
+  from {
+    opacity: 0
+  }
+  to {
+    opacity: 1
+  }
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 10px;
 }
 
 
@@ -103,7 +140,7 @@ body {
 
 /* Portfolio */
 .main {
-  background-color: #04020a;
+  background-color: #59098c;
   border-top: 5px #351694 solid;
   color: #fbf9ff;
 }
