--- a/styling.css
+++ b/styling.css
@@ -2,7 +2,7 @@ body {
   display: block;
   font-family: 'Quicksand', sans-serif;
   margin: 0;
-  background: #030106;
+  background: #060301;
   color: #f0eef3;
 }
 
@@ -11,8 +11,12 @@ body {
   margin: 0 11%;
 }
 
-.heading {
+.index .heading {
   margin: 11% 0;
+}
+
+.portfolio .heading {
+  margin: 5.5% 0;
 }
 
 .heading h1 {
@@ -21,14 +25,16 @@ body {
 }
 
 .nav ul {
-  max-width: 1920px;
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 350px;
   margin: 0;
+  font-weight: 700;
+  padding: 11px 0 0 0;
 }
 
 .nav ul li {
   display: inline-block;
-  margin: 1em;
-  font-weight: 700;
 }
 
 .nav a {
@@ -37,7 +43,7 @@ body {
 }
 
 .nav a:hover {
-  border-bottom: 2px #59098c solid;
+  border-bottom: 2px #ee5e07 solid;
 }
 
 .heading p {
@@ -61,7 +67,7 @@ body {
 }
 
 .copy {
-  border-left: 3px solid #59098c;
+  border-left: 3px solid #ee5e07;
   padding: 0.5% 1%;
   overflow: hidden;
 }
@@ -139,15 +145,9 @@ body {
 
 
 /* Portfolio */
-.main {
-  background-color: #59098c;
-  border-top: 5px #351694 solid;
-  color: #fbf9ff;
-}
 
 .portfolio-items {
   display: flex;
-  flex: 1 0 50%;
 }
 
 .portfolio-items .container {
@@ -165,7 +165,12 @@ body {
   background-color: #351694;
   border-radius: 11px;
   color: #fbf9ff;
+  font-weight: 700;
   padding: 11px;
   text-align: center;
   text-decoration: none;
+}
+
+.portfolio-items .button:hover {
+  background-color: #4621b9;
 }
