--- a/styling.css
+++ b/styling.css
@@ -23,8 +23,32 @@ body {
   margin: 0;
 }
 
+.heading p {
+  font-size: 2vw;
+  margin: 0;
+}
+
+@media screen and (max-width: 750px) {
+  .heading h1 {
+    font-size: 36px;
+  }
+  .heading p {
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .heading h1 {
+    font-size: 80px;
+  }
+}
+
 .subtitle {
   color: #ee5e07;
+}
+
+.nav {
+  height: 31px;
 }
 
 .nav ul {
@@ -47,26 +71,6 @@ body {
 
 .nav a:hover {
   border-bottom: 2px #ee5e07 solid;
-}
-
-.heading p {
-  font-size: 2vw;
-  margin: 0;
-}
-
-@media screen and (max-width: 750px) {
-  .heading h1 {
-    font-size: 36px;
-  }
-  .heading p {
-    font-size: 22px;
-  }
-}
-
-@media screen and (min-width: 1920px) {
-  .heading h1 {
-    font-size: 80px;
-  }
 }
 
 .copy {
@@ -122,7 +126,7 @@ body {
 }
 
 @keyframes fadeIn {
-  from {
+ from {
     opacity: 0
   }
   to {
@@ -157,7 +161,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 22px;
-  width: 50%;
+  align-items: baseline
 }
 
 .portfolio-items .portfolio-content {
@@ -165,9 +169,9 @@ body {
 }
 
 .portfolio-items .button {
-  background-color: #351694;
-  border-radius: 11px;
+  border: 1px #ee5e07 solid;
   color: #fbf9ff;
+  border-radius: 11px;
   font-weight: 700;
   padding: 11px;
   text-align: center;
@@ -175,5 +179,7 @@ body {
 }
 
 .portfolio-items .button:hover {
-  background-color: #4621b9;
+  border: 1px #219ab9 solid;
+  background: #060301;
+  color: #fbf9ff;
 }
