--- a/styling.css
+++ b/styling.css
@@ -18,11 +18,6 @@ body {
   height: calc(100vh - 31px);
 }
 
-.not-intro {
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
 .heading h1 {
   font-size: 4vw;
   margin: 0;
@@ -31,6 +26,10 @@ body {
 .heading p {
   font-size: 2vw;
   margin: 0;
+}
+
+.not-intro .heading {
+  margin: 111px 0;
 }
 
 @media screen and (max-width: 750px) {
@@ -72,10 +71,12 @@ body {
 .nav a {
   color: white;
   text-decoration: none;
+  padding-left: 5px;
+  border-left: 2px #060301 solid;
 }
 
 .nav a:hover {
-  border-bottom: 2px #ee5e07 solid;
+  border-left: 2px #ee5e07 solid;
 }
 
 .copy {
@@ -154,14 +155,20 @@ body {
 .portfolio-items .container {
   display: flex;
   align-items: center;
+  overflow: hidden;
+}
+
+.portfolio-items .container + .container {
+  margin-top: 60px;
 }
 
 .portfolio-items .portfolio-image {
-  flex: 1;
+  width: 50%;
 }
 
 .portfolio-items .portfolio-image img {
   width: 100%;
+  border-radius: 11px;
 }
 
 .portfolio-items .portfolio-content {
@@ -191,7 +198,11 @@ body {
 }
 
 .portfolio-items .button:hover {
-  border: 1px #219ab9 solid;
-  background: #060301;
-  color: #fbf9ff;
+  background: #ee5e07;
+  color: #000;
+}
+
+.not-intro .heading {
+  border-left: 2px solid #ee5e07;
+  padding-left: 11px;
 }
