--- a/styling.css
+++ b/styling.css
@@ -228,15 +228,18 @@ li i {
 /* <nav> nav */
 nav {
   position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 nav ul {
   display: flex;
   list-style: none;
+  margin: 11px 0;
 }
 
 nav li {
-  padding-left: 6px;
+  padding: 2px 0 2px 6px;
 }
 
 nav li+li {
@@ -246,6 +249,12 @@ nav li+li {
 nav li:hover {
   border-left: 2px solid #ee5e07;
   padding-left: 4px;
+}
+
+nav li a {
+  background: none;
+  color: #f0eef3;
+  text-decoration: none;
 }
 
 
