--- a/styling.css
+++ b/styling.css
@@ -1,8 +1,12 @@
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
 body {
-  display: block;
+  display: inline-block;
   font-family: 'Quicksand', sans-serif;
   margin: 0;
-  background: #060301;
   color: #f0eef3;
 }
 
@@ -18,6 +22,10 @@ body {
   flex-direction: column;
   justify-content: space-around;
   height: 100vh;
+}
+
+.heading {
+  margin-top:42px;
 }
 
 .heading h1 {
@@ -93,12 +101,12 @@ body {
   animation-timing-function: ease;
   animation-fill-mode: forwards;
   animation-delay: 1.2s;
-  transform: translate(-104%);
+  transform: translate(-106%);
 }
 
 @keyframes slideIn {
   from {
-    transform: translate(-104%);
+    transform: translate(-107%);
   }
   to {
     transform: translate(0);
@@ -226,7 +234,7 @@ li i {
 
 /* <nav> nav */
 nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   /* background: linear-gradient(-184deg, rgb(20, 57, 113) 0%, #06030100 11% ); */
@@ -260,42 +268,29 @@ nav li a {
 
 /* Portfolio */
 
-.portfolio-items .container {
+.portfolio .container {
   display: flex;
-  align-items: center;
-  overflow: hidden;
+  flex-direction: column;
 }
 
 .portfolio-items .container + .container {
   margin-top: 100px;
 }
 
-.portfolio-items .portfolio-image {
-  width: 50%;
+.portfolio .container h3 {
+  border-left: 2px solid #ee5e07;
+  margin-bottom: 11px;
+  margin: 0 0 22px 0;
+  padding: 0 0 0 11px;
 }
 
-.portfolio-items .portfolio-image img {
+.portfolio .container img {
   width: 100%;
   border-radius: 11px;
 }
 
-.portfolio-items .portfolio-content {
-  display: flex;
-  flex: 2;
-  flex-direction: column;
-  align-items: baseline;
-  margin: 0 30px;
-}
-
-.portfolio-items .portfolio-content h3 {
-  margin: 0.5em 0;
-}
-
-.portfolio-items .portfolio-content p {
-  margin: 0.5em 0;
-}
-
 .button {
+  display: block;
   border: 2px #ee5e07 solid;
   color: #fbf9ff;
   border-radius: 11px;
@@ -304,6 +299,7 @@ nav li a {
   text-align: center;
   text-decoration: none;
   margin: 11px 0;
+  box-sizing: border-box;
 }
 
 .button:hover {
@@ -320,7 +316,6 @@ nav li a {
 form {
   display: flex;
   flex-direction: column;
-  width: 38vw;
 }
 
 form input, form textarea {
@@ -338,16 +333,21 @@ form label {
 input + label {
   margin-top: 22px;
 }
+@media screen and (max-width: 750px) {
 
-.contact {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
 }
 
-.bio {
+@media screen and (min-width: 751px) {
+  .contact {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+}
+
+.purply {
   max-width: 400px;
   padding: 11px;
-  box-shadow: 5px 7px 175px 0px #5f07ee;
-  margin-left: 55px;
+  box-shadow: 0 0 77px 0 #5f07ee;
+  margin-bottom: 77px;
 }
