--- a/styling.css
+++ b/styling.css
@@ -4,8 +4,17 @@ html {
 }
 
 body {
+  display: block;
   font-family: 'Quicksand', sans-serif;
   margin: 0;
+  color: #f0eef3;
+}
+
+body a {
+  color: #ee5e07;
+}
+
+body a:hover, body a:focus {
   color: #f0eef3;
 }
 
@@ -270,6 +279,7 @@ nav li a {
 .portfolio .container {
   display: flex;
   flex-direction: column;
+  overflow: auto; /* IE fix */
 }
 
 @media screen and (min-width: 751px) {
@@ -295,12 +305,14 @@ nav li a {
 }
 
 .portfolio .container img {
+  height: auto;
   width: 100%;
   border-radius: 11px;
+  flex-shrink: 0; /* IE fix */;
 }
 
 .portfolio p {
-  flex: 1;
+  flex-grow: 1;
 }
 
 .button {
@@ -339,6 +351,7 @@ form input, form textarea {
   margin-top: 1em;
   padding: 11px;
   border-radius: 0px 22px 0px 0;
+  overflow: auto;
 }
 
 form label {
@@ -350,8 +363,17 @@ input + label {
   margin-top: 22px;
 }
 
-@media screen and (max-width: 750px) {
+input:disabled, textarea:disabled, #email:disabled {
+  background: #060301;
+  color: #f0eef3;
+}
 
+/* Annoyingly we have to override Chrome styles */
+input:-webkit-autofill:disabled, 
+textarea:-webkit-autofill:disabled,
+input:-internal-autofill-selected {
+  background: #060301!important;
+  color: #f0eef3!important;
 }
 
 @media screen and (min-width: 751px) {
