--- a/styling.css
+++ b/styling.css
@@ -81,7 +81,10 @@ body a:hover, body a:focus {
 
 @media screen and (min-width: 1920px) {
   .heading h1 {
-    font-size: 75px;
+    font-size: 66px;
+  }
+  .heading p {
+    font-size: 44px;
   }
 }
 
@@ -143,31 +146,6 @@ body a:hover, body a:focus {
   }
   to {
     opacity: 1
-  }
-}
-
-@media screen and (min-width: 431px) {
-
-  li:hover i {
-    border-right: 2px #ee5e07 solid;
-  }
-
-  li:hover p {
-    animation-name: fromLeft;
-    animation-duration: 0.5s;
-    animation-iteration-count: 1;
-    animation-timing-function: ease;
-    animation-fill-mode: forwards;
-    visibility: visible;
-  }
-
-  @keyframes fromLeft {
-  from {
-      margin-left: -100%;
-    }
-    to {
-      margin-left: 0;
-    }
   }
 }
 
