--- a/styling.css
+++ b/styling.css
@@ -208,13 +208,12 @@ nav li a {
 
 @media screen and (min-width: 751px) {
   .portfolio .container {
-    width: 50%;
-  }
-  .portfolio-items .container + .container {
-    margin-left: 111px;
+    width: 45%;
   }
   .portfolio .portfolio-items {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
