--- a/styling.css
+++ b/styling.css
@@ -22,7 +22,6 @@ body a:hover, body a:focus {
   width: calc(100% - 240px);
   max-width: 1400px;
   margin: 0 auto;
-  
 }
 
 .intro {
@@ -32,22 +31,14 @@ body a:hover, body a:focus {
   height: 100vh;
 }
 
-.heading {
-  margin-top:42px;
-}
-
 .heading h1 {
-  font-size: 4vw;
+  font-size: 3.2vw;
   margin: 0;
 }
 
 .heading p {
   font-size: 2vw;
   margin: 0;
-}
-
-.not-intro .heading {
-  margin: 111px 0;
 }
 
 .subtitle {
@@ -74,9 +65,6 @@ body a:hover, body a:focus {
   .content {
     width: calc(100% - 200px);
   }
-  .animation-container {
-    font-size: 0.8em;
-  }
 }
 
 @media screen and (max-width: 580px) {
@@ -87,13 +75,16 @@ body a:hover, body a:focus {
 
 @media screen and (max-width: 430px) {
   .content {
-    width: calc(100% - 111px);
+    width: calc(100% - 66px);
   }
 }
 
 @media screen and (min-width: 1920px) {
   .heading h1 {
-    font-size: 75px;
+    font-size: 66px;
+  }
+  .heading p {
+    font-size: 44px;
   }
 }
 
@@ -158,79 +149,6 @@ body a:hover, body a:focus {
   }
 }
 
-/* Nav */
-.nav {
-  position: fixed;
-  width: 120px;
-  top: 0;
-}
-
-.nav ul {
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  font-weight: 700;
-  padding: 0;
-  margin: 0;
-}
-
-.nav ul li {
-  display: inline-block;
-  margin: 11px 0;
-}
-
-.nav a {
-  color: white;
-  text-decoration: none;
-  padding-left: 5px;
-  border-left: 2px #060301 solid;
-  background: none;
-}
-
-.animation-container {
-  overflow: hidden;
-  padding-left: 5px;
-}
-
-li a {
-  display: flex;
-  align-items: center;
-  max-height: 1em;
-}
-
-li p {
-  visibility: hidden;
-}
-
-li i {
-  padding-right: 5px;
-}
-
-@media screen and (min-width: 431px) {
-
-  li:hover i {
-    border-right: 2px #ee5e07 solid;
-  }
-
-  li:hover p {
-    animation-name: fromLeft;
-    animation-duration: 0.5s;
-    animation-iteration-count: 1;
-    animation-timing-function: ease;
-    animation-fill-mode: forwards;
-    visibility: visible;
-  }
-
-  @keyframes fromLeft {
-  from {
-      margin-left: -100%;
-    }
-    to {
-      margin-left: 0;
-    }
-  }
-}
-
 .footer {
   position: absolute;
   bottom: 0;
@@ -245,13 +163,14 @@ nav {
   position: absolute;
   top: 0;
   width: 100%;
-  /* background: linear-gradient(-184deg, rgb(20, 57, 113) 0%, #06030100 11% ); */
+  z-index: 11;
 }
 
 nav ul {
   display: flex;
   list-style: none;
   margin: 11px 0;
+  padding-left: 11px;
 }
 
 nav li {
@@ -276,32 +195,31 @@ nav li a {
 
 /* Portfolio */
 
+.portfolio h2 {
+  margin: 0 0 111px 0;
+}
+
 .portfolio .container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 111px;
   overflow: auto; /* IE fix */
 }
 
 @media screen and (min-width: 751px) {
-  .portfolio-items .container + .container {
-    margin-left: 111px;
+  .portfolio .container {
+    width: 45%;
   }
   .portfolio .portfolio-items {
     display: flex;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  .portfolio-items .container + .container {
-    margin-top: 111px;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
 .portfolio .container h3 {
-  border-left: 2px solid #ee5e07;
   margin-bottom: 11px;
   margin: 0 0 22px 0;
-  padding: 0 0 0 11px;
 }
 
 .portfolio .container img {
@@ -335,11 +253,6 @@ nav li a {
   color: #000;
 }
 
-.not-intro .heading {
-  border-left: 2px solid #ee5e07;
-  padding-left: 11px;
-}
-
 /* Contact */
 form {
   display: flex;
@@ -352,11 +265,6 @@ form input, form textarea {
   padding: 11px;
   border-radius: 0px 22px 0px 0;
   overflow: auto;
-}
-
-form label {
-  border-left: 2px solid #ed5e07;
-  padding-left: 11px;
 }
 
 input + label {
@@ -377,25 +285,45 @@ input:-internal-autofill-selected {
 }
 
 @media screen and (min-width: 751px) {
-  form {
-    width: 50%;
-    margin-right: 111px;
-  }
-
   .contact {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: row-reverse;
+    align-items: baseline;
   }
 
-  .contact .purply {
+  .contact > div {
     width: 50%;
+  }
+  .contact > form {
+    width: 50%;
+    margin-left: 111px;
   }
 }
 
 .purply {
-  padding: 11px;
-  box-shadow: 0 0 77px 0 #5f07ee;
-  margin-bottom: 77px;
+  padding: 22px;
+  box-shadow: 0 -11px 44px -11px #5f07ee;
+  margin-bottom: 111px;
+  border-radius: 11px;
+}
+
+.purply {
+  animation-name: blurIn;
+  animation-duration: 1.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  visibility: visible;
+  filter: blur(50px);
+  opacity: 0;
+}
+
+@keyframes blurIn {
+from {
+  filter: blur(50px);
+  opacity: 0;
+  }
+to {
+  filter: blur(0px);
+  opacity: 1
+  }
 }
