--- a/styling.css
+++ b/styling.css
@@ -14,7 +14,8 @@ body a {
   color: #ee5e07;
 }
 
-body a:hover, body a:focus {
+body a:hover,
+body a:focus {
   color: #f0eef3;
 }
 
@@ -95,11 +96,11 @@ body a:hover, body a:focus {
 
 .slideIn {
   animation-name: slideIn;
-  animation-duration:1s;
+  animation-duration: 1s;
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
-  animation-delay: 1.2s;
+  animation-delay: 0.8s;
   transform: translate(-106%);
 }
 
@@ -118,7 +119,7 @@ body a:hover, body a:focus {
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
-  animation-delay: 0.8s;
+  animation-delay: 0.5s;
   transform: scaleY(0);
   overflow: hidden;
 }
@@ -141,11 +142,11 @@ body a:hover, body a:focus {
 }
 
 @keyframes fadeIn {
- from {
-    opacity: 0
+  from {
+    opacity: 0;
   }
   to {
-    opacity: 1
+    opacity: 1;
   }
 }
 
@@ -177,7 +178,7 @@ nav li {
   padding: 2px 0 2px 6px;
 }
 
-nav li+li {
+nav li + li {
   margin-left: 11px;
 }
 
@@ -191,7 +192,6 @@ nav li a {
   color: #f0eef3;
   text-decoration: none;
 }
-
 
 /* Portfolio */
 
@@ -226,7 +226,7 @@ nav li a {
   height: auto;
   width: 100%;
   border-radius: 11px;
-  flex-shrink: 0; /* IE fix */;
+  flex-shrink: 0; /* IE fix */
 }
 
 .portfolio p {
@@ -248,7 +248,8 @@ nav li a {
   cursor: pointer;
 }
 
-.button:hover, .button:focus {
+.button:hover,
+.button:focus {
   background: #ee5e07;
   color: #000;
 }
@@ -259,7 +260,8 @@ form {
   flex-direction: column;
 }
 
-form input, form textarea {
+form input,
+form textarea {
   border: none;
   margin-top: 1em;
   padding: 11px;
@@ -271,17 +273,19 @@ input + label {
   margin-top: 22px;
 }
 
-input:disabled, textarea:disabled, #email:disabled {
+input:disabled,
+textarea:disabled,
+#email:disabled {
   background: #060301;
   color: #f0eef3;
 }
 
 /* Annoyingly we have to override Chrome styles */
-input:-webkit-autofill:disabled, 
+input:-webkit-autofill:disabled,
 textarea:-webkit-autofill:disabled,
 input:-internal-autofill-selected {
-  background: #060301!important;
-  color: #f0eef3!important;
+  background: #060301 !important;
+  color: #f0eef3 !important;
 }
 
 @media screen and (min-width: 751px) {
@@ -304,26 +308,18 @@ input:-internal-autofill-selected {
   box-shadow: 0 -11px 44px -11px #5f07ee;
   margin-bottom: 111px;
   border-radius: 11px;
-}
-
-.purply {
   animation-name: blurIn;
   animation-duration: 1.5s;
   animation-iteration-count: 1;
   animation-timing-function: ease;
   animation-fill-mode: forwards;
-  visibility: visible;
-  filter: blur(50px);
-  opacity: 0;
 }
 
 @keyframes blurIn {
-from {
-  filter: blur(50px);
-  opacity: 0;
+  from {
+    box-shadow: none;
   }
-to {
-  filter: blur(0px);
-  opacity: 1
+  to {
+    box-shadow: 0 -11px 44px -11px #5f07ee;
   }
 }
