--- a/global.css
+++ b/global.css
@@ -19,6 +19,10 @@ body a:focus {
   color: #f0eef3;
 }
 
+body p {
+  font-size: 20px
+}
+
 .content {
   width: calc(100% - 240px);
   max-width: 1400px;
@@ -128,6 +132,7 @@ nav li a {
   background: none;
   color: #f0eef3;
   text-decoration: none;
+  font-size: 20px;
 }
 
 /* Buttons */
@@ -152,83 +157,11 @@ nav li a {
   color: #000;
 }
 
-/* Animations */
-
 .purply {
   padding: 22px;
   box-shadow: 0 -11px 44px -11px #5f07ee;
   margin-bottom: 111px;
   border-radius: 11px;
-  animation-name: blurIn;
-  animation-duration: 1.5s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-}
-
-@keyframes blurIn {
-  from {
-    box-shadow: none;
-  }
-  to {
-    box-shadow: 0 -11px 44px -11px #5f07ee;
-  }
-}
-
-.slideIn {
-  animation-name: slideIn;
-  animation-duration: 1s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-  animation-delay: 0.8s;
-  transform: translate(-106%);
-}
-
-@keyframes slideIn {
-  from {
-    transform: translate(-107%);
-  }
-  to {
-    transform: translate(0);
-  }
-}
-
-.openEqually {
-  animation-name: openEqually;
-  animation-duration: 0.3s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-  animation-delay: 0.5s;
-  transform: scaleY(0);
-  overflow: hidden;
-}
-
-@keyframes openEqually {
-  from {
-    transform: scaleY(0);
-  }
-  to {
-    transform: scaleY(1);
-  }
-}
-
-.fadeIn {
-  animation-name: fadeIn;
-  animation-duration: 1.5s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 /* Footer */
